--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,10 @@
 	</parent>
 	<groupId>itmonopoly.ru</groupId>
 	<artifactId>slime</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<version>0.0.3-SNAPSHOT</version>
 	<name>slime</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Ending Project</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -24,16 +25,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.googlecode.json-simple</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.xerial</groupId>
-			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.25.2</version>
-		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
